compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__consts__literal_nil_does_not_get_constant_annotation.snap
---
source: compiler-core/src/javascript/tests/consts.rs
expression: pub const a = Nil
---
----- SOURCE CODE
pub const a = Nil

----- COMPILED JAVASCRIPT
export const a = undefined;
