compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__consts__literal_string_does_not_get_constant_annotation.snap
---
source: compiler-core/src/javascript/tests/consts.rs
expression: "pub const a = \"1\""
---
----- SOURCE CODE
pub const a = "1"

----- COMPILED JAVASCRIPT
export const a = "1";
