compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__consts__multiple_remote_constants_non_alphabetical_order.snap
---
source: compiler-core/src/javascript/tests/consts.rs
expression: "\nimport mod\n\npub fn go(x) {\n  case x {\n    _ if x == mod.b -> \"b\"\n    _ if x == mod.a -> \"a\"\n    _ if x == mod.c -> \"c\"\n    _ -> \"dunno\"\n  }\n}\n"
---
----- SOURCE CODE

import mod

pub fn go(x) {
  case x {
    _ if x == mod.b -> "b"
    _ if x == mod.a -> "a"
    _ if x == mod.c -> "c"
    _ -> "dunno"
  }
}


----- COMPILED JAVASCRIPT
import * as $mod from "../../dep/mod.mjs";

export function go(x) {
  if (x === ($mod.b)) {
    return "b";
  } else if (x === ($mod.a)) {
    return "a";
  } else if (x === ($mod.c)) {
    return "c";
  } else {
    return "dunno";
  }
}
